packages/clippier/tests/snapshots/affected_packages_tests__affected_reasoning.snap
---
source: packages/clippier/tests/affected_packages_tests.rs
expression: test_data
---
changed_files:
  - packages/models/src/lib.rs
reasoning_chain:
  models:
    - "Contains changed file: packages/models/src/lib.rs"
  api:
    - "Depends on affected package: models"
  web:
    - "Depends on affected package: api"
  cli:
    - "Depends on affected package: api"
note: "Each package includes reasoning for why it's affected"
