packages/clippier/tests/snapshots/affected_packages_tests__complex_dependency_chains.snap
---
source: packages/clippier/tests/affected_packages_tests.rs
expression: test_data
---
dependency_graph:
  core: []
  shared-utils: []
  models:
    - core
  api:
    - models
    - shared-utils
  web:
    - api
  cli:
    - api
changed_api_affects:
  - web
  - cli
