packages/clippier/tests/snapshots/affected_packages_tests__empty_change_sets.snap
---
source: packages/clippier/tests/affected_packages_tests.rs
expression: test_data
---
changed_files: []
affected_packages: []
note: No changes should result in no affected packages
