packages/clippier/tests/snapshots/affected_packages_tests__external_deps_integration.snap
---
source: packages/clippier/tests/affected_packages_tests.rs
expression: test_data
---
external_deps_changed:
  - serde
  - tokio
packages_using_serde:
  - core
  - models
  - shared-utils
packages_using_tokio:
  - core
  - api
transitively_affected:
  - api
  - web
  - cli
reasoning:
  core:
    - "External dependency changes: serde, tokio"
  models:
    - "Depends on affected package: core"
  api:
    - "External dependency changes: tokio"
    - "Depends on affected package: models"
