packages/clippier/tests/snapshots/affected_packages_tests__nested_path_edge_cases.snap
---
source: packages/clippier/tests/affected_packages_tests.rs
expression: test_data
---
changed_files:
  - packages/api/src/handlers/mod.rs
  - packages/api/tests/integration.rs
  - packages/api/benches/benchmark.rs
affected_packages:
  - api
note: All files within package directory should be detected
