packages/clippier/tests/snapshots/affected_packages_tests__transitive_impact.snap
---
source: packages/clippier/tests/affected_packages_tests.rs
expression: test_data
---
changed_files:
  - packages/core/src/lib.rs
directly_affected:
  - core
transitively_affected:
  - models
  - api
  - web
  - cli
dependency_chain:
  models: depends on core
  api: depends on models
  web: depends on api
  cli: depends on api
