packages/clippier/tests/snapshots/affected_packages_tests__workspace_root_changes.snap
---
source: packages/clippier/tests/affected_packages_tests.rs
expression: test_data
---
changed_files:
  - Cargo.toml
  - Cargo.lock
affected_packages: []
note: "Workspace-level changes don't map to specific packages"
